<resources>
    <string name="app_name">Notes Pick Up</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_website">Website</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_downloads">Downloads</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_faqs">FAQs</string>
    <string name="menu_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>