<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_notes"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_downloads"
            android:icon="@drawable/ic_cloud_download"
            android:title="@string/menu_downloads" />
    </group>
    <group android:id="@+id/groupid">
        <item
            android:id="@+id/nav_faqs"
            android:icon="@drawable/ic_question"
            android:title="@string/menu_faqs" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_rating"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_phone"
            android:title="@string/menu_contact_us" />

<!--        <item-->
<!--            android:id="@+id/nav_empty1"-->
<!--            android:title="" />-->
<!--    </group>-->
<!--    <group android:id="@+id/groupid2" >-->
<!--        <item-->
<!--            android:id="@+id/nav_logout"-->
<!--            android:icon="@drawable/ic_exit"-->
<!--            android:title="@string/menu_logout" />-->
    </group>
</menu>